@@ -1,41 +1,33 @@
 package com.the_herd.backend.controllers;
 
 import java.time.LocalDateTime;
+import java.util.ArrayList;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import java.util.List;
 
 
-import com.the_herd.backend.controllers.requests.EventRequest;
+import com.the_herd.backend.dto.requests.EventRequest;
+import com.the_herd.backend.models.Tier;
+import com.the_herd.backend.repositories.TierRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.web.bind.annotation.DeleteMapping;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.PutMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import com.the_herd.backend.repositories.EventRepository;
 import com.the_herd.backend.repositories.TicketRepository;
 import com.the_herd.backend.models.Event;
 import com.the_herd.backend.models.Ticket;
-import com.the_herd.backend.controllers.responses.GuestResponse;
-
-
-
-
+import com.the_herd.backend.dto.responses.GuestResponse;
 
 @RestController
-@RequestMapping("/api/v1/events")
+@RequestMapping("/api/events")
 @RequiredArgsConstructor
 public class EventController {
     private final EventRepository eventRepository;
     private final TicketRepository ticketRepository;
+    private final TierRepository tierRepository;
 
 
     @PostMapping("/create")
@@ -74,12 +66,20 @@ public class EventController {
         if (event == null) {
             return ResponseEntity.notFound().build();
         }
-    
-        List<Ticket> eventTickets = ticketRepository.findByEvent_EventId(id);
+
+        List<Tier> tiers = tierRepository.findAllByEvent_EventId(id).orElse(null);
+        if(tiers == null) {
+            return ResponseEntity.notFound().build();
+        }
+        List<Ticket> eventTickets = new ArrayList<>();
+        for(Tier tier: tiers) {
+            List<Ticket> tickets = ticketRepository.findByTier_Id(tier.getId());
+            eventTickets.addAll(tickets);
+        }
     
         List<GuestResponse> guestsInfo = eventTickets.stream()
             .map(ticket -> new GuestResponse(ticket.getUser().getFirstName(), ticket.getUser().getLastName(), ticket.getUser().getEmail()))
-            .collect(Collectors.toList());
+                .toList();
     
         return ResponseEntity.ok(guestsInfo);
     }
